feat: leave Last Recall Time N/A after assimilate
Co-authored-by: Cursor <cursoragent@cursor.com>